--- a/requirements.yml
+++ b/requirements.yml
@@ -1,7 +1,53 @@
-torch~=1.9.1+cu111
-numpy~=1.21.5
-matplotlib~=3.5.1
-scipy~=1.10.1
-seaborn~=0.12.2
-optuna~=3.4.0
-pandas~=1.2.4
+absl-py==2.2.2
+alembic==1.15.2
+autopage==0.5.2
+bottle==0.13.3
+cliff==4.9.1
+cmd2==2.5.11
+colorlog==6.9.0
+contourpy==1.3.0
+cycler==0.12.1
+fonttools==4.57.0
+greenlet==3.2.2
+grpcio==1.71.0
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
+joblib==1.4.2
+kiwisolver==1.4.7
+Mako==1.3.10
+Markdown==3.8
+MarkupSafe==3.0.2
+matplotlib==3.9.4
+numpy==1.23.0
+optuna==3.4.0
+optuna-dashboard==0.18.0
+packaging==25.0
+pandas==2.2.3
+pbr==6.1.1
+pillow==11.2.1
+prettytable==3.16.0
+protobuf==6.30.2
+pyparsing==3.2.3
+pyperclip==1.9.0
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.2
+scikit-learn==1.6.1
+scipy==1.13.1
+seaborn==0.13.2
+six==1.17.0
+SQLAlchemy==2.0.41
+stevedore==5.4.1
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+threadpoolctl==3.6.0
+torch==1.9.1+cu111
+torchaudio==0.9.1
+torchvision==0.10.1+cu111
+tqdm==4.67.1
+typing==3.7.4.3
+typing_extensions==4.13.2
+tzdata==2025.2
+wcwidth==0.2.13
+Werkzeug==3.1.3
+zipp==3.21.0
